# PCleaner

./: .gitignore  LICENSE  README.md  install.bat  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: features.md  gui-guide.md  tui-guide.md
pcleaner/: __init__.py  __main__.py
pcleaner/cli/: commands.py
pcleaner/core/: browsers.py  cleaner.py  registry.py  scanner.py  wiper.py
pcleaner/gui/: app.py
pcleaner/tools/: disk_analyzer.py  duplicates.py  health.py  startup.py  task_manager.py  uninstaller.py
pcleaner/tui/: app.py  pcleaner.tcss
pcleaner/tui/screens/: __init__.py  cleaner.py  dashboard.py  disk.py  duplicates.py  health.py  registry.py  startup.py  task_manager.py  uninstaller.py
pcleaner/utils/: config.py  elevation.py  format.py  logger.py  security.py
tests/: test_registry.py  test_scanner.py  test_security.py  test_tools.py
