[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcleaner"
version = "1.0.0"
description = "PCleaner - The free Cleaner App. A professional open-source Windows PC cleaning tool."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "PCleaner Contributors" }]
keywords = ["cleaner", "windows", "optimization", "registry", "privacy", "tui", "gui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.2",
    "textual>=0.47.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "psutil>=5.9.8",
    "send2trash>=1.8.3",
    "pywin32>=306",
    "Pillow>=10.0.0",
]

[project.scripts]
pcleaner     = "pcleaner.__main__:main"
pcleaner-gui = "pcleaner.__main__:launch_gui"
pcleaner-tui = "pcleaner.__main__:launch_tui"

[project.urls]
Homepage   = "https://github.com/pcleaner/pcleaner"
Repository = "https://github.com/pcleaner/pcleaner"
Issues     = "https://github.com/pcleaner/pcleaner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "psutil>=5.9.8",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcleaner*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
